# liter

./: .gitignore  README.md  literconfig.json  pyproject.toml
liter/: __init__.py  changelog.py  console.py  utils.py  version.py
