[tool.poetry]
name = "liter"
version = "0.0.1"
description = ""
authors = ["Jorge Morgado <jorge.morgadov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
liter = 'liter.console:app'
